CSS wrapping fix attempt

--- a/src/Login/LoginPage.css
+++ b/src/Login/LoginPage.css
@@ -20,7 +20,7 @@ body {
 }
 
 /* Surrounding containment for login box */
-.containment {
+.login-containment {
     width: 420px;
     /* background: rgb(1, 147, 147); */
     background: transparent;
@@ -38,12 +38,12 @@ body {
 }
 
 /* Centers Login header and keeps its size consistent */
-.containment h1 {
+.login-containment h1 {
     font-size: 36px;
     text-align: center;
 }
 
-.containment .login-input {
+.login-containment .login-input {
     width: 100%;
     height: 50px;
     /* background: darkslategray; */
@@ -52,7 +52,7 @@ body {
 }
 
 /* References input types (username and password boxes) */
-.containment input {
+.login-containment input {
     /* Makes the boxes full size with back ground mini containers */
     width: 100%;
     height: 100%;
@@ -72,12 +72,12 @@ body {
 }
 
 /* References the Username and Password text */
-.containment input::placeholder {
+.login-containment input::placeholder {
     color: #fff;
 }
 
 /* Login button */
-.containment .submit-btn {
+.login-containment .submit-btn {
     width: 100%;
     height: 45px;
     background: #fff;
@@ -96,7 +96,7 @@ body {
     font-weight: 600;
 }
 
-.containment .create-account-link {
+.login-containment .create-account-link {
     /* Made create account text slightly smaller */
     font-size: 14px;
     text-align: center;
